@@ -32,35 +32,44 @@ class CloseAgent(gaupol.Delegate):
     # pylint: disable-msg=E0203,W0201
 
     def _close_all_pages(self):
-        """Close all pages after seeking confirmation."""
+        """Close all pages after seeking confirmation.
 
+        Raise Default if cancelled and (all) pages were not closed.
+        """
         if sum([len(self._need_confirmation(x)) for x in self.pages]) > 1:
             return self._confirm_and_close_pages(self.pages)
         while self.pages:
             self.close_page(self.pages[0])
 
     def _confirm_and_close_page(self, page):
-        """Close page after possibly saving its documents."""
+        """Close page after possibly saving its documents.
 
+        Raise Default if cancelled and page was not closed.
+        """
         docs = self._need_confirmation(page)
         if len(docs) == 2:
             return self._confirm_and_close_pages([page])
-        if gaupol.gtk.DOCUMENT.MAIN in docs:
+        elif gaupol.gtk.DOCUMENT.MAIN in docs:
             return self._confirm_and_close_page_main(page)
-        if gaupol.gtk.DOCUMENT.TRAN in docs:
+        elif gaupol.gtk.DOCUMENT.TRAN in docs:
             return self._confirm_and_close_page_translation(page)
         self.close_page(page, False)
 
     def _confirm_and_close_pages(self, pages):
-        """Close pages after possibly saving their documents."""
+        """Close pages after possibly saving their documents.
 
+        Raise Default if cancelled and (all) pages were not closed.
+        """
         dialog = gaupol.gtk.MultiCloseDialog(self.window, self, pages)
-        self.flash_dialog(dialog)
+        response = self.flash_dialog(dialog)
+        if response not in (gtk.RESPONSE_YES, gtk.RESPONSE_NO):
+            raise gaupol.gtk.Default
 
-    @gaupol.gtk.util.asserted_return
     def _confirm_and_close_page_main(self, page):
-        """Close page after possibly saving the main document."""
+        """Close page after possibly saving the main document.
 
+        Raise Default if cancelled and page was not closed.
+        """
         title = _('Save changes to main document "%s" before closing?')
         title = title % page.get_main_basename()
         message = _("If you don't save, changes will be permanently lost.")
@@ -72,13 +81,15 @@ class CloseAgent(gaupol.Delegate):
         response = self.flash_dialog(dialog)
         if response == gtk.RESPONSE_YES:
             self.save_main_document(page)
-        assert response in (gtk.RESPONSE_YES, gtk.RESPONSE_NO)
+        if response not in (gtk.RESPONSE_YES, gtk.RESPONSE_NO):
+            raise gaupol.gtk.Default
         self.close_page(page, False)
 
-    @gaupol.gtk.util.asserted_return
     def _confirm_and_close_page_translation(self, page):
-        """Close page after possibly saving the translation document."""
+        """Close page after possibly saving the translation document.
 
+        Raise Default if cancelled and page was not closed.
+        """
         title = _('Save changes to translation document "%s" before closing?')
         title = title % page.get_translation_basename()
         message = _("If you don't save, changes will be permanently lost.")
@@ -90,7 +101,8 @@ class CloseAgent(gaupol.Delegate):
         response = self.flash_dialog(dialog)
         if response == gtk.RESPONSE_YES:
             self.save_translation_document(page)
-        assert response in (gtk.RESPONSE_YES, gtk.RESPONSE_NO)
+        if response not in (gtk.RESPONSE_YES, gtk.RESPONSE_NO):
+            raise gaupol.gtk.Default
         self.close_page(page, False)
 
     def _need_confirmation(self, page):
@@ -122,8 +134,10 @@ class CloseAgent(gaupol.Delegate):
             domain.position = self.output_window.get_position()
 
     def close_page(self, page, confirm=True):
-        """Close page seeking confirmation if confirm is True."""
+        """Close page seeking confirmation if confirm is True.
 
+        Raise Default if cancelled and page was not closed.
+        """
         if confirm:
             return self._confirm_and_close_page(page)
         index = self.pages.index(page)
@@ -134,21 +148,25 @@ class CloseAgent(gaupol.Delegate):
         self.update_gui()
         self.emit("page-closed", page)
 
+    @gaupol.gtk.util.silent(gaupol.gtk.Default)
     def on_close_all_projects_activate(self, *args):
         """Close all open projects."""
 
         self._close_all_pages()
 
+    @gaupol.gtk.util.silent(gaupol.gtk.Default)
     def on_close_project_activate(self, *args):
         """Close project."""
 
         self.close_page(self.get_current_page())
 
+    @gaupol.gtk.util.silent(gaupol.gtk.Default)
     def on_page_close_request(self, page, *args):
         """Close project."""
 
         self.close_page(page)
 
+    @gaupol.gtk.util.silent(gaupol.gtk.Default)
     def on_quit_activate(self, *args):
         """Quit Gaupol."""
 
